Added a CFP and an activities page

--- a/_source/important_dates.html
+++ b/_source/important_dates.html
@@ -9,7 +9,15 @@ title: Important Dates
         Paper Submission Deadline
       </th>
       <th>
-        ?
+        2nd March 2012
+      </th>
+    </tr>
+    <tr>
+      <th>
+        Notification
+      </th>
+      <th>
+        16th March 2012
       </th>
     </tr>
     <tr>
@@ -17,16 +25,22 @@ title: Important Dates
         Paper Camera-Ready Deadline
       </th>
       <th>
-        ?
+        2nd April 2012
       </th>
     </tr>
     <tr>
       <th>
-        Workshop
+        Early registration for ICWSM'12
       </th>
       <th>
-        ?
+        6th April 2012
       </th>
     </tr>
+    <th>
+      Workshop
+    </th>
+    <th>
+      4th June 2012
+    </th>
   </tbody>
 </table>
