--- a/_source/index.html
+++ b/_source/index.html
@@ -8,7 +8,7 @@ title: Overview
 <p>
   The Workshop on Social Media Visualization (SocMedVis) will be held in conjunction with
   <a href='http://www.icwsm.org/'>the International AAAI Conference on Weblogs and Social Media (ICWSM'12)</a>
-  in Dublin on June 2012. The workshop is a venue for presentation of research and applications of visualization of social media data.
+  in Dublin on 4th June 2012. The workshop is a venue for presentation of research and applications of visualization of social media data.
 </p>
 <p>
   The goal of the workshop is to bring together researchers and industry practitioners interested in visual and interactive techniques for social media analysis, particularly in social sciences and humanities as well as in industry and to discuss ideas, techniques, and applications to support social media analysis.
