--- a/_source/call_for_papers.html
+++ b/_source/call_for_papers.html
@@ -2,4 +2,142 @@
 layout: default
 title: Call for Papers
 ---
-To be announced.
+<h3 style='line-height: 100%'>
+  Workshop on Social Media Visualization (SocMedVis)
+  <br />
+  at
+  <a href='http://www.icwsm.org'>the International AAAI Conference on Weblogs and Social Media (ICWSM'12)</a>
+  <br />
+  4th June 2012, Dublin, Ireland
+  <br />
+  <br />
+  <a href='http://socmedvis.ucd.ie'>http://socmedvis.ucd.ie</a>
+  <br />
+  <br />
+  <br />
+</h3>
+<p>
+  Social media study and analysis brings researchers from many fields into a single setting. Even though the tasks of these researchers are varied, data visualization and analytics plays an important role. For industry and academics alike, visualization of social media data helps with hypothesis formation and supports the explanation of phenomena.
+</p>
+<p>
+  The Workshop on Social Media Visualization (SocMedVis) will be held in conjunction with
+  <a href='http://www.icwsm.org/'>the International AAAI Conference on Weblogs and Social Media (ICWSM'12)</a>
+  in Dublin on 4th June 2012. The workshop is a venue for presentation of research and applications of visualization of social media data.
+</p>
+<p>
+  The goal of the workshop is to bring together researchers and industry practitioners interested in visual and interactive techniques for social media analysis, particularly in social sciences and humanities as well as in industry and to discuss ideas, techniques, and applications to support social media analysis.
+</p>
+<h3>
+  Important Dates
+</h3>
+<ul class='unstyled'>
+  <li>
+    <strong>
+      Paper Submission Deadline: 2nd March 2012
+    </strong>
+  </li>
+  <li>
+    Notification: 16th March 2012
+  </li>
+  <li>
+    Paper Camera-Ready Deadline: 2nd April 2012
+  </li>
+  <li>
+    Early registration for ICWSM'12: 6th April 2012
+  </li>
+  <li>
+    Workshop: 4th June 2012
+  </li>
+</ul>
+<h3>
+  Topics
+</h3>
+<p>
+  We invite research, application, and position papers on the topic of visualization and social media. Topics of interest include but are not limited to:
+</p>
+<ul>
+  <li>
+    Visualization of Social Media Networks and Social Text
+  </li>
+  <li>
+    Visual Analysis of Evolving Social Media Data
+  </li>
+  <li>
+    Interactive Techniques for Sentiment Analysis and Brand Perception
+  </li>
+  <li>
+    Visualization of Memes and Trends in Social Media
+  </li>
+  <li>
+    Formal Evaluation Techniques in Social Media
+  </li>
+  <li>
+    Visualization of Social Media for Media Studies
+  </li>
+  <li>
+    Social Media in Social Sciences and Humanities
+  </li>
+  <li>
+    Data Mining and Machine Learning in Social Media
+  </li>
+  <li>
+    Visual Analytics of Social Media in Industry
+  </li>
+  <li>
+    Formal Evaluation Techniques in Social Media
+  </li>
+  <li>
+    Systems and languages for social media analytics
+  </li>
+  <li>
+    Methodologies and processes for social media analysis
+  </li>
+  <li>
+    Collaborative analysis of text corpora
+  </li>
+  <li>
+    Real-time visualization of social media data
+  </li>
+  <li>
+    Visual text analytics in social media
+  </li>
+  <li>
+    Studies of analytic work on social media
+  </li>
+  <li>
+    Representations of uncertainty in text analytics
+  </li>
+</ul>
+<h3>
+  Submissions
+</h3>
+<p>
+  Papers are limited to 4 pages. Papers must be formatted according to
+  <a href='http://www.aaai.org/Publications/Author/formatting-instructions.pdf'>AAAI guidelines</a>.
+  Papers in PDF format must be submitted by email to the conference organizers by 4th June 2012. A subset of the accepted papers will be invited for oral presentation at the workshop. All other accepted papers will be presented as posters during the poster session or interactive demo session.
+</p>
+<p>
+  The program will also include a madness session at the beginning of the workshop to allow anyone attending the workshop to briefly introduce themselves, their work, and state their positions and goals related to the scope of the workshop. If you are planning to attend the workshop you are welcome to send an email to conference organizers to ensure a slot in the madness session by 2nd April 2012.
+</p>
+<p>
+  We also plan to host a panel of researchers in social sciences and humanities and industrial researchers of varied perspectives on the application of visualization to academic disciplines and industry where visualization is needed to understand social media data.
+</p>
+<p>
+  For more information please visit the workshop web page at
+  <a href='http://socmedvis.ucd.ie'>http://socmedvis.ucd.ie</a>
+  or send email to organizers.
+</p>
+<p>
+  Regards,
+  <ul class='unstyled'>
+    <li>
+      <a href='http://www.cliquecluster.org/content/daniel-archambault'>Daniel Archambault</a>, University College Dublin
+    </li>
+    <li>
+      <a href='http://researcher.ibm.com/view.php?person=us-eser'>Eser Kandogan</a>, IBM Research
+    </li>
+    <li>
+      <a href='http://www.martinharrigan.ie'>Martin Harrigan</a>, University College Dublin
+    </li>
+  </ul>
+</p>
