Added email addresses

--- a/_source/call_for_papers.html
+++ b/_source/call_for_papers.html
@@ -114,7 +114,7 @@ title: Call for Papers
 <p>
   Papers are limited to 4 pages. Papers must be formatted according to
   <a href='http://www.aaai.org/Publications/Author/formatting-instructions.pdf'>AAAI guidelines</a>.
-  Papers in PDF format must be submitted by email to the conference organizers by 4th June 2012. A subset of the accepted papers will be invited for oral presentation at the workshop. All other accepted papers will be presented as posters during the poster session or interactive demo session.
+  Papers in PDF format must be submitted using EasyChair to the conference organizers by 4th June 2012. A subset of the accepted papers will be invited for oral presentation at the workshop. All other accepted papers will be presented as posters during the poster session or interactive demo session.
 </p>
 <p>
   The program will also include a madness session at the beginning of the workshop to allow anyone attending the workshop to briefly introduce themselves, their work, and state their positions and goals related to the scope of the workshop. If you are planning to attend the workshop you are welcome to send an email to conference organizers to ensure a slot in the madness session by 2nd April 2012.
@@ -125,19 +125,19 @@ title: Call for Papers
 <p>
   For more information please visit the workshop web page at
   <a href='http://socmedvis.ucd.ie'>http://socmedvis.ucd.ie</a>
-  or send email to organizers.
+  or send email to any of the organizers.
 </p>
 <p>
   Regards,
   <ul class='unstyled'>
     <li>
-      <a href='http://www.cliquecluster.org/content/daniel-archambault'>Daniel Archambault</a>, University College Dublin
+      <a href='http://www.cliquecluster.org/content/daniel-archambault'>Daniel Archambault</a>, University College Dublin, daniel&#46;archambault&#64;ucd&#46;ie
     </li>
     <li>
-      <a href='http://researcher.ibm.com/view.php?person=us-eser'>Eser Kandogan</a>, IBM Research
+      <a href='http://researcher.ibm.com/view.php?person=us-eser'>Eser Kandogan</a>, IBM Research, eser&#64;us&#46;ibm&#46;com
     </li>
     <li>
-      <a href='http://www.martinharrigan.ie'>Martin Harrigan</a>, University College Dublin
+      <a href='http://www.martinharrigan.ie'>Martin Harrigan</a>, University College Dublin, martin.harrigan&#64;ucd&#46;ie
     </li>
   </ul>
 </p>
