--- a/_source/organizers.html
+++ b/_source/organizers.html
@@ -4,12 +4,12 @@ title: Organizers
 ---
 <ul class='unstyled'>
   <li>
-    <a href='http://www.cliquecluster.org/content/daniel-archambault'>Daniel Archambault</a>, University College Dublin
+    <a href='http://www.cliquecluster.org/content/daniel-archambault'>Daniel Archambault</a>, University College Dublin, daniel&#46;archambault&#64;ucd&#46;ie
   </li>
   <li>
-    <a href='http://researcher.ibm.com/view.php?person=us-eser'>Eser Kandogan</a>, IBM Research
+    <a href='http://researcher.ibm.com/view.php?person=us-eser'>Eser Kandogan</a>, IBM Research, eser&#64;us&#46;ibm&#46;com
   </li>
   <li>
-    <a href='http://www.martinharrigan.ie'>Martin Harrigan</a>, University College Dublin
+    <a href='http://www.martinharrigan.ie'>Martin Harrigan</a>, University College Dublin, martin.harrigan&#64;ucd&#46;ie
   </li>
 </ul>
