Revised the CFP

--- a/_source/call_for_papers.html
+++ b/_source/call_for_papers.html
@@ -25,7 +25,7 @@ title: Call for Papers
   in Dublin on 4th June 2012. The workshop is a venue for presentation of research and applications of visualization of social media data.
 </p>
 <p>
-  The goal of the workshop is to bring together researchers and industry practitioners interested in visual and interactive techniques for social media analysis, particularly in social sciences and humanities as well as in industry and to discuss ideas, techniques, and applications to support social media analysis.
+  The goal of the workshop is to bring together researchers and industry practitioners interested in visual and interactive techniques for social media analysis to discuss their potential application to the social sciences, humanities, and industry.  We solicit contributions that discuss novel techniques and applications of visualization and visual analytics approaches to social media data sources.
 </p>
 <h3>
   Important Dates
@@ -57,9 +57,6 @@ title: Call for Papers
 </p>
 <ul>
   <li>
-    Visualization of Social Media Networks and Social Text
-  </li>
-  <li>
     Visual Analysis of Evolving Social Media Data
   </li>
   <li>
@@ -67,9 +64,6 @@ title: Call for Papers
   </li>
   <li>
     Visualization of Memes and Trends in Social Media
-  </li>
-  <li>
-    Formal Evaluation Techniques in Social Media
   </li>
   <li>
     Visualization of Social Media for Media Studies
@@ -87,25 +81,28 @@ title: Call for Papers
     Formal Evaluation Techniques in Social Media
   </li>
   <li>
-    Systems and languages for social media analytics
+    Systems and Languages for Social Media Analytics
   </li>
   <li>
-    Methodologies and processes for social media analysis
+    Methodologies and Processes for Social Media Analysis
   </li>
   <li>
-    Collaborative analysis of text corpora
+    Collaborative Analysis of Text Corpora
   </li>
   <li>
-    Real-time visualization of social media data
+    Real-Time Visualization of Social Media Data
   </li>
   <li>
-    Visual text analytics in social media
+    Visualization and Visual Text Analytics in Social Media
   </li>
   <li>
-    Studies of analytic work on social media
+    Visualization and Visual Analytics of Social Media Networks
   </li>
   <li>
-    Representations of uncertainty in text analytics
+    Studies of Analytic Work on Social Media
+  </li>
+  <li>
+    Representations of Uncertainty in Text Analytics
   </li>
 </ul>
 <h3>
@@ -118,7 +115,7 @@ title: Call for Papers
   <a href='http://www.easychair.org/conferences/?conf=socmedvis2012'>
     EasyChair
   </a>
-  to the conference organizers by 2nd March 2012. A subset of the accepted papers will be invited for oral presentation at the workshop. All other accepted papers will be presented as posters during the poster session or interactive demo session.
+  by 2nd March 2012. A subset of the accepted papers will be invited for oral presentation at the workshop. All other accepted papers will be presented as posters during the poster session or interactive demo session.
 </p>
 <p>
   The program will also include a madness session at the beginning of the workshop to allow anyone attending the workshop to briefly introduce themselves, their work, and state their positions and goals related to the scope of the workshop. If you are planning to attend the workshop you are welcome to send an email to conference organizers to ensure a slot in the madness session by 2nd April 2012.
