--- a/_source/call_for_papers.html
+++ b/_source/call_for_papers.html
@@ -2,7 +2,7 @@
 layout: default
 title: Call for Papers
 ---
-<h3 style='line-height: 100%'>
+<h3 style='line-height: 1.5em;'>
   Workshop on Social Media Visualization (SocMedVis)
   <br />
   at
@@ -10,12 +10,10 @@ title: Call for Papers
   <br />
   4th June 2012, Dublin, Ireland
   <br />
-  <br />
   <a href='http://socmedvis.ucd.ie'>http://socmedvis.ucd.ie</a>
   <br />
-  <br />
-  <br />
 </h3>
+<br />
 <p>
   Social media study and analysis brings researchers from many fields into a single setting. Even though the tasks of these researchers are varied, data visualization and analytics plays an important role. For industry and academics alike, visualization of social media data helps with hypothesis formation and supports the explanation of phenomena.
 </p>
@@ -109,7 +107,7 @@ title: Call for Papers
   Submissions
 </h3>
 <p>
-  Papers are limited to 4 pages. Papers must be formatted according to
+  Papers are limited to 4 pages in length and should have a visualization or visual analytics component to them. Papers must be formatted according to
   <a href='http://www.aaai.org/Publications/Author/formatting-instructions.pdf'>AAAI guidelines</a>.
   Papers in PDF format must be submitted using
   <a href='http://www.easychair.org/conferences/?conf=socmedvis2012'>
