--- a/_source/call_for_papers.html
+++ b/_source/call_for_papers.html
@@ -113,7 +113,7 @@ title: Call for Papers
   <a href='http://www.easychair.org/conferences/?conf=socmedvis2012'>
     EasyChair
   </a>
-  by 2nd March 2012. A subset of the accepted papers will be invited for oral presentation at the workshop. All other accepted papers will be presented as posters during the poster session or interactive demo session.
+  by 2nd March 2012. A subset of the accepted papers will be invited for oral presentation at the workshop and will appear in the ICWSM'12 workshop proceedings. All other accepted papers will be presented as posters during the poster session or interactive demo session.
 </p>
 <p>
   The program will also include a madness session at the beginning of the workshop to allow anyone attending the workshop to briefly introduce themselves, their work, and state their positions and goals related to the scope of the workshop. If you are planning to attend the workshop you are welcome to send an email to conference organizers to ensure a slot in the madness session by 2nd April 2012.
