--- a/_source/activities.html
+++ b/_source/activities.html
@@ -2,4 +2,17 @@
 layout: default
 title: Activities
 ---
-To be announced.
+<h2>
+  Attendee Fast Forward
+</h2>
+<p>
+  This session will take place at the beginning of the workshop and will allow any participant of the workshop to freely address the attendees for one minute. The session is free form and participants are encouraged to state their background, goals, and topics of interest with respect to visualization and social media. This event is an opportunity to understand the interests of all attendees and provides a venue to introduce directions of research. This session, at the
+  <a href='http://vialab.science.uoit.ca/textvis2011'>Interactive Visual Text Analytics for Decision Making workshop</a>,
+  was vibrant and was an excellent way to encourage participant interaction. If you would like to participate in the attendee fast forward, you can send an email to socmedvis&#64;ucd&#46;ie before attending the workshop.
+</p>
+<h2>
+  Applications Panel
+</h2>
+<p>
+  This panel includes participants with varied perspectives on the application of visualization to other academic disciplines and industry to understand social media data sources. Panel members are not from the visualization community, but are rather researchers from the social sciences and humanities as well as members of industry. The names of panel members are currently being finalized and will be posted shortly.
+</p>
