Added program committee and keynote speaker

--- a/_source/activities.html
+++ b/_source/activities.html
@@ -3,6 +3,32 @@ layout: default
 title: Activities
 ---
 <h2>
+  Keynote Speaker: Ben Shneiderman
+</h2>
+<h3>
+  Hubble Telescope for Community Activity: Focusing on Social Media Visual Analytics
+</h3>
+<img align='right' height='263px' src='media/ben_shneiderman.png' style='padding: 10px;' width='200px' />
+<p>
+  The availability of social media data presents remarkable opportunities and challenges for visual analytics researchers.  The capacity to search, filter, analyze, and visualize real-time streams enables users to find patterns, relationships, and anomalies. Business and marketing professionals can track commentaries about their products, while political analysts can take the pulse of public sentiment.  Among the many challenges is to filter the data to focus on relevant items in the context of adversaries who wish to influence public perceptions.  Integrating statistical methods, text analytics, and visualization is essential, but creating compelling images with meaningful commentaries will keep researchers busy for decades.
+</p>
+<h3>
+  Biography
+</h3>
+<p>
+  <a href='http://www.cs.umd.edu/~ben'>Ben Shneiderman</a>
+  is a Professor in the Department of Computer Science and Founding Director (1983-2000) of the
+  <a href='http://www.cs.umd.edu/hcil'>Human-Computer Interaction Laboratory</a>
+  at the University of Maryland. He is a Fellow of the AAAS, ACM, and IEEE, and a Member of the National Academy of Engineering.
+</p>
+<p>
+  Prof. Shneiderman is the co-author with Catherine Plaisant of
+  <a href='http://www.awl.com/DTUI'>Designing the User Interface: Strategies for Effective Human-Computer Interaction</a>
+  (5th ed., 2010).  With Stu Card and Jock Mackinlay, he co-authored Readings in Information Visualization: Using Vision to Think (1999). His book Leonardo’s Laptop appeared in October 2002 (MIT Press) and won the IEEE book award for Distinguished Literary Contribution.  His latest book, with Derek Hansen and Marc Smith, is
+  <a href='http://www.codeplex.com/nodexl'>Analyzing Social Media Networks with NodeXL</a>
+  (2010).
+</p>
+<h2>
   Attendee Fast Forward
 </h2>
 <p>
