--- a/_source/index.html
+++ b/_source/index.html
@@ -23,6 +23,21 @@ title: Overview
     </span>
     &nbsp;
     <b>
+      7th Feb. 2012:
+    </b>
+    <a href='http://www.cs.umd.edu/~ben'>Ben Shneiderman</a>
+    is the keynote speaker for the workshop. See the
+    <a href='/activities.html'>activities</a>
+    page for more details.
+  </li>
+  <li>
+    <b>
+      7th Feb. 2012:
+    </b>
+    We have added the program committee.
+  </li>
+  <li>
+    <b>
       11th Jan. 2012:
     </b>
     The website is live.
