--- a/_source/call_for_papers.html
+++ b/_source/call_for_papers.html
@@ -110,9 +110,7 @@ title: Call for Papers
   Papers are limited to 4 pages in length and should have a visualization or visual analytics component to them. Papers must be formatted according to
   <a href='http://www.aaai.org/Publications/Author/formatting-instructions.pdf'>AAAI guidelines</a>.
   Papers in PDF format must be submitted using
-  <a href='http://www.easychair.org/conferences/?conf=socmedvis2012'>
-    EasyChair
-  </a>
+  <a href='http://www.easychair.org/conferences/?conf=socmedvis2012'>EasyChair</a>
   by 2nd March 2012. A subset of the accepted papers will be invited for oral presentation at the workshop and will appear in the ICWSM'12 workshop proceedings. All other accepted papers will be presented as posters during the poster session or interactive demo session.
 </p>
 <p>
