--- a/_source/organizers_and_program_committee.html
+++ b/_source/organizers_and_program_committee.html
@@ -5,7 +5,7 @@ title: Organizers & Program Committee
 <h2>
   Organizers
 </h2>
-<ul class='unstyled'>
+<ul>
   <li>
     <a href='http://www.cliquecluster.org/content/daniel-archambault'>Daniel Archambault</a>, University College Dublin, daniel&#46;archambault&#64;ucd&#46;ie
   </li>
@@ -19,6 +19,29 @@ title: Organizers & Program Committee
 <h2>
   Program Committee
 </h2>
-<p>
-  To be announced.
-</p>
+<ul>
+  <li>
+    <a href='http://fabianabel.de'>Fabian Abel</a>, TU Delft
+  </li>
+  <li>
+    <a href='http://www.l3s.de/~herder'>Eelco Herder</a>, L3S Research Center
+  </li>
+  <li>
+    <a href='http://www.lri.fr/~fekete'>Jean-Daniel Fekete</a>, INRIA Saclay
+  </li>
+  <li>
+    Christian Glahn, ETH Z&#252;rich
+  </li>
+  <li>
+    <a href='http://research.microsoft.com/en-us/um/people/bongshin'>Bongshin Lee</a>, Microsoft
+  </li>
+  <li>
+    <a href='http://www.connectedaction.net/marc-smith'>Marc Smith</a>, Social Media Research Foundation
+  </li>
+  <li>
+    <a href='http://researcher.ibm.com/view.php?person=il-ADAMP'>Adam Perer</a>, IBM Research
+  </li>
+  <li>
+    <a href='http://www.huamin.org/'>Huamin Qu</a>, Hong Kong University of Science and Technology
+  </li>
+</ul>
