Extended the submission and notification deadlines

--- a/_source/important_dates.html
+++ b/_source/important_dates.html
@@ -9,7 +9,11 @@ title: Important Dates
         Paper Submission Deadline
       </th>
       <th>
-        2nd March 2012
+        <del>
+          2nd March 2012
+        </del>
+        &nbsp;
+        7th March 2012
       </th>
     </tr>
     <tr>
@@ -17,7 +21,11 @@ title: Important Dates
         Notification
       </th>
       <th>
-        16th March 2012
+        <del>
+          16th March 2012
+        </del>
+        &nbsp;
+        20th March 2012
       </th>
     </tr>
     <tr>
