--- a/_source/index.html
+++ b/_source/index.html
@@ -23,6 +23,11 @@ title: Overview
     </span>
     &nbsp;
     <b>
+      The submission deadline has been extended until 7th March 2012.
+    </b>
+  </li>
+  <li>
+    <b>
       7th Feb. 2012:
     </b>
     <a href='http://www.cs.umd.edu/~ben'>Ben Shneiderman</a>
