--- a/_source/call_for_papers.html
+++ b/_source/call_for_papers.html
@@ -31,11 +31,21 @@ title: Call for Papers
 <ul class='unstyled'>
   <li>
     <strong>
-      Paper Submission Deadline: 2nd March 2012
+      Paper Submission Deadline:
+      <del>
+        2nd March 2012
+      </del>
+      &nbsp;
+      7th March 2012
     </strong>
   </li>
   <li>
-    Notification: 16th March 2012
+    Notification:
+    <del>
+      16th March 2012
+    </del>
+    &nbsp;
+    20th March 2012
   </li>
   <li>
     Paper Camera-Ready Deadline: 2nd April 2012
@@ -111,7 +121,7 @@ title: Call for Papers
   <a href='http://www.aaai.org/Publications/Author/formatting-instructions.pdf'>AAAI guidelines</a>.
   Papers in PDF format must be submitted using
   <a href='http://www.easychair.org/conferences/?conf=socmedvis2012'>EasyChair</a>
-  by 2nd March 2012. A subset of the accepted papers will be invited for oral presentation at the workshop and will appear in the ICWSM'12 workshop proceedings. All other accepted papers will be presented as posters during the poster session or interactive demo session.
+  by 7th March 2012. A subset of the accepted papers will be invited for oral presentation at the workshop and will appear in the ICWSM'12 workshop proceedings. All other accepted papers will be presented as posters during the poster session or interactive demo session.
 </p>
 <p>
   The program will also include a madness session at the beginning of the workshop to allow anyone attending the workshop to briefly introduce themselves, their work, and state their positions and goals related to the scope of the workshop. If you are planning to attend the workshop you are welcome to send an email to conference organizers to ensure a slot in the madness session by 2nd April 2012.
