--- a/_source/submissions.html
+++ b/_source/submissions.html
@@ -9,5 +9,5 @@ title: Submissions
   <a href='http://www.easychair.org/conferences/?conf=socmedvis2012'>
     EasyChair
   </a>
-  by 2nd March 2012. A subset of the accepted papers will be invited for oral presentation at the workshop and will appear in the ICWSM'12 workshop proceedings. All other accepted papers will be presented as posters during the poster session or interactive demo session.
+  by 7th March 2012. A subset of the accepted papers will be invited for oral presentation at the workshop and will appear in the ICWSM'12 workshop proceedings. All other accepted papers will be presented as posters during the poster session or interactive demo session.
 </p>
