Highlighted the submission extension news.

--- a/_source/index.html
+++ b/_source/index.html
@@ -22,7 +22,7 @@ title: Overview
       New
     </span>
     &nbsp;
-    <b>
+    <b style='font-weight:bold; color: #ff3333;'>
       The submission deadline has been extended until 7th March 2012.
     </b>
   </li>
