The submission system is now closed

--- a/_source/call_for_papers.html
+++ b/_source/call_for_papers.html
@@ -40,7 +40,7 @@ title: Call for Papers
     </strong>
   </li>
   <li>
-    Notification:
+    Paper Notification:
     <del>
       16th March 2012
     </del>
