--- a/_source/index.html
+++ b/_source/index.html
@@ -22,6 +22,15 @@ title: Overview
       New
     </span>
     &nbsp;
+    <b>
+      8th Mar. 2012:
+    </b>
+    The submission system is now closed.
+  </li>
+  <li>
+    <b>
+      1st Mar. 2012:
+    </b>
     <b style='font-weight:bold; color: #ff3333;'>
       The submission deadline has been extended until 7th March 2012.
     </b>
