--- a/_source/important_dates.html
+++ b/_source/important_dates.html
@@ -18,7 +18,7 @@ title: Important Dates
     </tr>
     <tr>
       <th>
-        Notification
+        Paper Notification
       </th>
       <th>
         <del>
