Added the accepted paper list

--- a/_source/index.html
+++ b/_source/index.html
@@ -23,6 +23,14 @@ title: Overview
     </span>
     &nbsp;
     <b>
+      25th Mar. 2012:
+    </b>
+    The
+    <a href='/schedule.html'>accepted paper list</a>
+    is now out.
+  </li>
+  <li>
+    <b>
       8th Mar. 2012:
     </b>
     The submission system is now closed.
