--- a/_source/index.html
+++ b/_source/index.html
@@ -23,6 +23,14 @@ title: Overview
     </span>
     &nbsp;
     <b>
+      11th May 2012:
+    </b>
+    The
+    <a href='/schedule.html'>schedule</a>
+    is now available.
+  </li>
+  <li>
+    <b>
       25th Mar. 2012:
     </b>
     The
