--- a/_source/schedule.html
+++ b/_source/schedule.html
@@ -3,85 +3,242 @@ layout: default
 title: Schedule
 ---
 <p>
-  The accepted paper list is as follows. The papers are listed alphabetically by first author. The paper titles may change slightly in the final schedule. The accepted poster list will be announced soon.
+  The schedule is as follows.
 </p>
-<ul class='unstyled'>
-  <li style='margin: 0 20px 20px 0;'>
-    <b>
-      Web-Based Visual Analytics for Social Media
-    </b>
-    <br />
-    Daniel Best,
-    Joe Bruce,
-    Scott Dowson,
-    Oriana Love
-    and
-    Liam McGrath
-  </li>
-  <li style='margin: 0 20px 20px 0;'>
-    <b>
-      Visualizing Instagram: Tracing Cultural Visual Rhythms
-    </b>
-    <br />
-    <a href='http://nadavhochman.net'>Nadav Hochman</a>
-    and
-    <a href='http://razschwartz.net'>Raz Schwartz</a>
-  </li>
-  <li style='margin: 0 20px 20px 0;'>
-    <b>
-      Visualization of the Public's Opinion on Politically Influential Tweets
-    </b>
-    <br />
-    Tanyoung Kim
-    and
-    Carl Disalvo
-  </li>
-  <li style='margin: 0 20px 20px 0;'>
-    <b>
-      Visualizing a Personal Timeline By Adding Multiple Social Contexts
-    </b>
-    <br />
-    Haewoon Kwak,
-    Yoonsung Hong,
-    Jinyoung You
-    and
-    Sue Moon
-  </li>
-  <li style='margin: 0 20px 20px 0;'>
-    <b>
-      Posting Behavior on Social Media Streams toward Temporal Bias
-    </b>
-    <br />
-    Bumsuk Lee
-  </li>
-  <li style='margin: 0 20px 20px 0;'>
-    <b>
-      Distilling Massive Amounts of Data into Simple Visualizations: Twitter Case Studies
-    </b>
-    <br />
-    Miguel Rios
-    and
-    Jimmy Lin
-  </li>
-  <li style='margin: 0 20px 20px 0;'>
-    <b>
-      Visualizing Information Diffusion and Polarisation with Key Statements
-    </b>
-    <br />
-    <a href='http://www.bbrel.co.uk'>Andrew Salway</a>,
-    Nicholas Diakopoulos,
-    and
-    Dag Elgesem
-  </li>
-  <li style='margin: 0 20px 20px 0;'>
-    <b>
-      Cultural Analytics of Large Datasets from Flickr
-    </b>
-    <br />
-    Daniela Ushizima,
-    Lev Manovich,
-    Todd Margolis,
-    and
-    Jeremy Douglass
-  </li>
-</ul>
+<table class='table-bordered'>
+  <tbody>
+    <tr style='background-color: #f0f0f0'>
+      <td width='15%'>
+        09:00 - 10:30
+      </td>
+      <td width='85%'>
+        <b>
+          Opening Session
+        </b>
+        <br />
+        <i>
+          Chair: Eser Kandogan
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>
+        <b>
+          Welcome and Introduction
+        </b>
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>
+        <b>
+          Hubble Telescope for Community Activity: Focusing on Social Media Visual Analytics
+        </b>
+        <br />
+        Keynote Speaker:
+        <a href='http://www.cs.umd.edu/~ben'>Ben Shneiderman</a>
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>
+        <b>
+          Attendee Fast Forward Session
+        </b>
+        <br />
+        This session will allow any participant of the workshop to freely address the attendees for one minute. The session is free form and participants are encouraged to state their background, goals, and topics of interest with respect to visualization and social media.
+      </td>
+    </tr>
+    <tr style='background-color: #f0f0f0'>
+      <td width='15%'>
+        10:30 - 11:00
+      </td>
+      <td width='85%'>
+        <b>
+          Break and Poster Session
+        </b>
+      </td>
+    </tr>
+    <tr style='background-color: #f0f0f0'>
+      <td width='15%'>
+        11:00 - 12:30
+      </td>
+      <td width='85%'>
+        <b>
+          Paper Session I: Images, Blogs and Streams
+        </b>
+        <br />
+        <i>
+          Chair: Daniel Archambault
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>
+        <b>
+          Visualizing Instagram: Tracing Cultural Visual Rhythms
+        </b>
+        <br />
+        <a href='http://nadavhochman.net'>Nadav Hochman</a>
+        and
+        <a href='http://razschwartz.net'>Raz Schwartz</a>
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>
+        <b>
+          Cultural Analytics of Large Datasets from Flickr
+        </b>
+        <br />
+        Daniela Ushizima,
+        Lev Manovich,
+        Todd Margolis,
+        and
+        Jeremy Douglass
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>
+        <b>
+          Posting Behavior on Social Media Streams toward Temporal Bias
+        </b>
+        <br />
+        Bumsuk Lee
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>
+        <b>
+          Visualizing Information Diffusion and Polarisation with Key Statements
+        </b>
+        <br />
+        <a href='http://www.bbrel.co.uk'>Andrew Salway</a>,
+        Nicholas Diakopoulos,
+        and
+        Dag Elgesem
+      </td>
+    </tr>
+    <tr style='background-color: #f0f0f0'>
+      <td width='15%'>
+        12:30 - 13:30
+      </td>
+      <td width='85%'>
+        <b>
+          Lunch and Poster Session
+        </b>
+      </td>
+    </tr>
+    <tr style='background-color: #f0f0f0'>
+      <td width='15%'>
+        13:30 - 15:00
+      </td>
+      <td width='85%'>
+        <b>
+          Applications Panel
+        </b>
+        <br />
+        <i>
+          Chair: Daniel Archambault
+        </i>
+        <br />
+        This panel includes participants with varied perspectives on the application of visualization to other academic disciplines and industry to understand social media data sources. Panel members are not from the visualization community, but are rather researchers from the social sciences and humanities as well as members of industry.
+      </td>
+    </tr>
+    <tr style='background-color: #f0f0f0'>
+      <td width='15%'>
+        15:00 - 15:30
+      </td>
+      <td width='85%'>
+        <b>
+          Break and Poster Session
+        </b>
+      </td>
+    </tr>
+    <tr style='background-color: #f0f0f0'>
+      <td width='15%'>
+        15:30 - 17:00
+      </td>
+      <td width='85%'>
+        <b>
+          Paper Session II: Microblogs
+        </b>
+        <br />
+        <i>
+          Chair: Martin Harrigan
+        </i>
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>
+        <b>
+          Distilling Massive Amounts of Data into Simple Visualizations: Twitter Case Studies
+        </b>
+        <br />
+        Miguel Rios
+        and
+        <a href='http://www.umiacs.umd.edu/~jimmylin'>Jimmy Lin</a>
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>
+        <b>
+          Visualizing a Personal Timeline By Adding Multiple Social Contexts
+        </b>
+        <br />
+        Haewoon Kwak,
+        Yoonsung Hong,
+        Jinyoung You
+        and
+        Sue Moon
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>
+        <b>
+          Web-Based Visual Analytics for Social Media
+        </b>
+        <br />
+        Daniel Best,
+        Joe Bruce,
+        Scott Dowson,
+        Oriana Love
+        and
+        Liam McGrath
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>
+        <b>
+          Visualization of the Public's Opinion on Politically Influential Tweets
+        </b>
+        <br />
+        Tanyoung Kim
+        and
+        Carl Disalvo
+      </td>
+    </tr>
+    <tr style='background-color: #f0f0f0'>
+      <td width='15%'>
+        19:00
+      </td>
+      <td width='85%'>
+        <b>
+          Social event at local pub
+        </b>
+        <br />
+        Please see the
+        <a href='http://socmedvis.ucd.ie'>website</a>
+        for directions.
+      </td>
+    </tr>
+  </tbody>
+</table>
