Added panel members

--- a/_source/activities.html
+++ b/_source/activities.html
@@ -40,5 +40,16 @@ title: Activities
   Applications Panel
 </h2>
 <p>
-  This panel includes participants with varied perspectives on the application of visualization to other academic disciplines and industry to understand social media data sources. Panel members are not from the visualization community, but are rather researchers from the social sciences and humanities as well as members of industry. The names of panel members are currently being finalized and will be posted shortly.
+  This panel includes participants with varied perspectives on the application of visualization to other academic disciplines and industry to understand social media data sources. Panel members are not from the visualization community, but are rather researchers from the social sciences and humanities as well as members of industry. The panel will include:
 </p>
+<ul>
+  <li>
+    Karen Wade, Humanities Institute Ireland (University College Dublin)
+  </li>
+  <li>
+    <a href='http://storyful.com'>Paul M. Watson</a>, Storyful
+  </li>
+  <li>
+    <a href='http://www.umiacs.umd.edu/~jimmylin'>Jimmy Lin</a>, Twitter
+  </li>
+</ul>
