Added abstracts for two speakers

--- a/_source/activities.html
+++ b/_source/activities.html
@@ -42,14 +42,30 @@ title: Activities
 <p>
   This panel includes participants with varied perspectives on the application of visualization to other academic disciplines and industry to understand social media data sources. Panel members are not from the visualization community, but are rather researchers from the social sciences and humanities as well as members of industry. The panel will include:
 </p>
-<ul>
-  <li>
-    Karen Wade, Humanities Institute Ireland (University College Dublin)
-  </li>
-  <li>
-    <a href='http://storyful.com'>Paul M. Watson</a>, Storyful
-  </li>
-  <li>
-    <a href='http://www.umiacs.umd.edu/~jimmylin'>Jimmy Lin</a>, Twitter
-  </li>
-</ul>
+<h3>
+  Karen Wade
+  <small>
+    <a href='http://www.ucd.ie/hii'>Humanities Institute Ireland (University College Dublin)</a>
+  </small>
+</h3>
+<h4>
+  Visualizing Online Communities: Applications from a literary and cultural studies perspective
+</h4>
+<p>
+  Online social media texts, and the communities they both form and represent, present new methodological challenges to researchers in the arts and humanities, requiring reassessments of concepts such as author, audience and text, as well as new methods of textual selection and analysis. This talk aims to briefly outline ways in which visualization and network analysis techniques are currently being used to approach such challenges in humanities and social sciences research, and to provide an overview of an ongoing humanities-based research project utilizing visualization techniques, based on a collaboration between representatives from UCD's Clique Research Cluster and the Humanities Institute of Ireland.
+</p>
+<h3>
+  Paul M. Watson
+  <small>
+    <a href='http://storyful.com'>Storyful</a>
+  </small>
+</h3>
+<h3>
+  Jimmy Lin
+  <small>
+    <a href='http://twitter.com'>Twitter</a>
+  </small>
+</h3>
+<p>
+  Data scientists at Twitter strive each day to derive insights from petabytes of data in our Hadoop-based data warehouse. Among other tasks, they try to understand user behavior and how various Twitter features are used, as part of a continuous process of improving and refining the service. Visualization is an important tool for accomplishing this, alongside Pig, R, and other tools for statistical analysis.
+</p>
