Added details of social event

--- a/_source/index.html
+++ b/_source/index.html
@@ -23,6 +23,14 @@ title: Overview
     </span>
     &nbsp;
     <b>
+      31st May 2012:
+    </b>
+    The social event will take place at
+    <a href='http://www.yelp.ie/biz/lincolns-inn-dublin'>Lincoln's Inn</a>
+    at 7:00pm.
+  </li>
+  <li>
+    <b>
       11th May 2012:
     </b>
     The
