--- a/_source/schedule.html
+++ b/_source/schedule.html
@@ -232,7 +232,13 @@ title: Schedule
       </td>
       <td width='85%'>
         <b>
-          Social event at local pub
+          Social event at
+          <a href='http://www.yelp.ie/biz/lincolns-inn-dublin'>Lincoln's Inn</a>.
+          See
+          <a href='media/social_event_venue.jpg'>
+            map
+          </a>
+          for directions from the workshop venue.
         </b>
       </td>
     </tr>
