Final thank you.

--- a/_source/index.html
+++ b/_source/index.html
@@ -18,10 +18,14 @@ title: Overview
 </h3>
 <ul class='unstyled'>
   <li>
-    <span class='label success'>
-      New
-    </span>
-    &nbsp;
+    <b>
+      9th Jun. 2012:
+    </b>
+    Thanks to everyone who participated in the workshop. The
+    <a href='http://www.aaai.org/Library/Workshops/ws12-03.php'>final papers</a>
+    are now available.
+  </li>
+  <li>
     <b>
       31st May 2012:
     </b>
