--- a/_source/index.html
+++ b/_source/index.html
@@ -16,66 +16,98 @@ title: Overview
 <h3>
   News
 </h3>
-<ul class='unstyled'>
-  <li>
-    <b>
-      9th Jun. 2012:
-    </b>
-    Thanks to everyone who participated in the workshop. The
-    <a href='http://www.aaai.org/Library/Workshops/ws12-03.php'>final papers</a>
-    are now available.
-  </li>
-  <li>
-    <b>
-      31st May 2012:
-    </b>
-    The social event will take place at
-    <a href='http://www.yelp.ie/biz/lincolns-inn-dublin'>Lincoln's Inn</a>
-    at 7:00pm.
-  </li>
-  <li>
-    <b>
-      11th May 2012:
-    </b>
-    The
-    <a href='/schedule.html'>schedule</a>
-    is now available.
-  </li>
-  <li>
-    <b>
-      25th Mar. 2012:
-    </b>
-    The
-    <a href='/schedule.html'>accepted paper list</a>
-    is now out.
-  </li>
-  <li>
-    <b>
-      8th Mar. 2012:
-    </b>
-    The submission system is now closed.
-  </li>
-  <li>
-    <b>
-      1st Mar. 2012:
-    </b>
-    <b style='font-weight:bold; color: #ff3333;'>
-      The submission deadline has been extended until 7th March 2012.
-    </b>
-  </li>
-  <li>
-    <b>
-      7th Feb. 2012:
-    </b>
-    <a href='http://www.cs.umd.edu/~ben'>Ben Shneiderman</a>
-    is the keynote speaker for the workshop. See the
-    <a href='/activities.html'>activities</a>
-    page for more details.
-  </li>
-  <li>
-    <b>
-      11th Jan. 2012:
-    </b>
-    The website is live.
-  </li>
-</ul>
+<p>
+  <b>
+    11th Jul. 2012:
+  </b>
+  Please consider submitting papers to the
+  <a href='http://datavis.hkjung.com'>Workshop on Aesthetic Data Visualization: Tools & Challenges for Interaction Designers</a>
+  at NordiCHI'12. The paper submission deadline is 6th Aug 2012.
+</p>
+<p>
+  <b>
+    11th Jul. 2012:
+  </b>
+  The paper "Distilling Massive Amounts of Data into Simple Visualizations: Twitter Case Studies" presented at the workshop was discussed in
+  <a href='http://engineering.twitter.com/2012/06/studying-rapidly-evolving-user.html'>several</a>
+  <a href='http://www.cccblog.org/2012/06/09/twitter-knows-when-you-sleep-and-more'>blog</a>
+  <a href='http://www.theatlantic.com/technology/archive/2012/06/when-twitter-sleeps-comparing-nyc-tokyo-istanbul-and-s-o-paulo/258118'>posts</a>.
+</p>
+<p>
+  <b>
+    11th Jul. 2012:
+  </b>
+  Please consider submitting papers to the
+  <a href='http://datavis.hkjung.com'>Workshop on Aesthetic Data Visualization: Tools & Challenges for Interaction Designers</a>
+  at NordiCHI'12. The paper submission deadline is 6th Aug 2012.
+</p>
+<p>
+  <b>
+    11th Jul. 2012:
+  </b>
+  The paper "Distilling Massive Amounts of Data into Simple Visualizations: Twitter Case Studies" presented at the workshop was discussed in
+  <a href='http://engineering.twitter.com/2012/06/studying-rapidly-evolving-user.html'>several</a>
+  <a href='http://www.cccblog.org/2012/06/09/twitter-knows-when-you-sleep-and-more'>blog</a>
+  <a href='http://www.theatlantic.com/technology/archive/2012/06/when-twitter-sleeps-comparing-nyc-tokyo-istanbul-and-s-o-paulo/258118'>posts</a>.
+</p>
+<p>
+  <b>
+    9th Jun. 2012:
+  </b>
+  Thanks to everyone who participated in the workshop. The
+  <a href='http://www.aaai.org/Library/Workshops/ws12-03.php'>final papers</a>
+  are now available.
+</p>
+<p>
+  <b>
+    31st May 2012:
+  </b>
+  The social event will take place at
+  <a href='http://www.yelp.ie/biz/lincolns-inn-dublin'>Lincoln's Inn</a>
+  at 7:00pm.
+</p>
+<p>
+  <b>
+    11th May 2012:
+  </b>
+  The
+  <a href='/schedule.html'>schedule</a>
+  is now available.
+</p>
+<p>
+  <b>
+    25th Mar. 2012:
+  </b>
+  The
+  <a href='/schedule.html'>accepted paper list</a>
+  is now out.
+</p>
+<p>
+  <b>
+    8th Mar. 2012:
+  </b>
+  The submission system is now closed.
+</p>
+<p>
+  <b>
+    1st Mar. 2012:
+  </b>
+  <b style='font-weight:bold; color: #ff3333;'>
+    The submission deadline has been extended until 7th March 2012.
+  </b>
+</p>
+<p>
+  <b>
+    7th Feb. 2012:
+  </b>
+  <a href='http://www.cs.umd.edu/~ben'>Ben Shneiderman</a>
+  is the keynote speaker for the workshop. See the
+  <a href='/activities.html'>activities</a>
+  page for more details.
+</p>
+<p>
+  <b>
+    11th Jan. 2012:
+  </b>
+  The website is live.
+</p>
