Add banner for the 2013 edition of the workshop

--- a/_source/call_for_papers.html
+++ b/_source/call_for_papers.html
@@ -20,7 +20,7 @@ title: Call for Papers
 <p>
   The Workshop on Social Media Visualization (SocMedVis) will be held in conjunction with
   <a href='http://www.icwsm.org/'>the International AAAI Conference on Weblogs and Social Media (ICWSM'12)</a>
-  in Dublin on 4th June 2012. The workshop is a venue for presentation of research and applications of visualization of social media data.
+  in Dublin, Ireland on 4th June 2012. The workshop is a venue for presentation of research and applications of visualization of social media data.
 </p>
 <p>
   The goal of the workshop is to bring together researchers and industry practitioners interested in visual and interactive techniques for social media analysis to discuss their potential application to the social sciences, humanities, and industry.  We solicit contributions that discuss novel techniques and applications of visualization and visual analytics approaches to social media data sources.
@@ -30,14 +30,14 @@ title: Call for Papers
 </h3>
 <ul class='unstyled'>
   <li>
-    <strong>
+    <b>
       Paper Submission Deadline:
       <del>
         2nd March 2012
       </del>
       &nbsp;
       7th March 2012
-    </strong>
+    </b>
   </li>
   <li>
     Paper Notification:
