--- a/_source/index.html
+++ b/_source/index.html
@@ -8,7 +8,7 @@ title: Overview
 <p>
   The Workshop on Social Media Visualization (SocMedVis) will be held in conjunction with
   <a href='http://www.icwsm.org/'>the International AAAI Conference on Weblogs and Social Media (ICWSM'12)</a>
-  in Dublin on 4th June 2012. The workshop is a venue for presentation of research and applications of visualization of social media data.
+  in Dublin, Ireland on 4th June 2012. The workshop is a venue for presentation of research and applications of visualization of social media data.
 </p>
 <p>
   The goal of the workshop is to bring together researchers and industry practitioners interested in visual and interactive techniques for social media analysis, particularly in social sciences and humanities as well as in industry and to discuss ideas, techniques, and applications to support social media analysis.
@@ -18,9 +18,19 @@ title: Overview
 </h3>
 <p>
   <b>
+    30th Jan. 2013:
+  </b>
+  The second edition of the
+  <a href='http://socmedvis.swansea.ac.uk/'>workshop</a>
+  will be held at
+  <a href='http://www.icwsm.org/'>ICWSM'13 in Boston, USA.</a>.
+  Please consider submitting your papers.
+</p>
+<p>
+  <b>
     11th Jul. 2012:
   </b>
-  Please consider submitting papers to the
+  Please consider submitting your papers to the
   <a href='http://datavis.hkjung.com'>Workshop on Aesthetic Data Visualization: Tools & Challenges for Interaction Designers</a>
   at NordiCHI'12. The paper submission deadline is 6th Aug 2012.
 </p>
