Fix typos and formatting

--- a/_source/activities.html
+++ b/_source/activities.html
@@ -8,7 +8,7 @@ title: Activities
 <h3>
   Hubble Telescope for Community Activity: Focusing on Social Media Visual Analytics
 </h3>
-<img align='right' height='263px' src='media/ben_shneiderman.png' style='padding: 10px;' width='200px' />
+<img align='right' height='263px' src='media/ben_shneiderman.png' style='padding: 10px;' width='200px'>
 <p>
   The availability of social media data presents remarkable opportunities and challenges for visual analytics researchers.  The capacity to search, filter, analyze, and visualize real-time streams enables users to find patterns, relationships, and anomalies. Business and marketing professionals can track commentaries about their products, while political analysts can take the pulse of public sentiment.  Among the many challenges is to filter the data to focus on relevant items in the context of adversaries who wish to influence public perceptions.  Integrating statistical methods, text analytics, and visualization is essential, but creating compelling images with meaningful commentaries will keep researchers busy for decades.
 </p>
