--- a/_source/schedule.html
+++ b/_source/schedule.html
@@ -9,13 +9,13 @@ title: Schedule
   <tbody>
     <tr style='background-color: #f0f0f0'>
       <td width='15%'>
-        09:00 - 10:30
+        09:00 &ndash; 10:30
       </td>
       <td width='85%'>
         <b>
           Opening Session
         </b>
-        <br />
+        <br>
         <i>
           Chair: Eser Kandogan
         </i>
@@ -35,7 +35,7 @@ title: Schedule
         <b>
           Hubble Telescope for Community Activity: Focusing on Social Media Visual Analytics
         </b>
-        <br />
+        <br>
         Keynote Speaker:
         <a href='http://www.cs.umd.edu/~ben'>Ben Shneiderman</a>
       </td>
@@ -46,13 +46,14 @@ title: Schedule
         <b>
           Attendee Fast Forward Session
         </b>
-        <br />
+        <br>
         This session will allow any participant of the workshop to freely address the attendees for one minute. The session is free form and participants are encouraged to state their background, goals, and topics of interest with respect to visualization and social media.
       </td>
     </tr>
+    Panel members are not from the visualization community, but are rather researchers from the social sciences and humanities as well as members of industry.
     <tr style='background-color: #f0f0f0'>
       <td width='15%'>
-        10:30 - 11:00
+        15:00 &ndash; 15:30
       </td>
       <td width='85%'>
         <b>
@@ -62,112 +63,13 @@ title: Schedule
     </tr>
     <tr style='background-color: #f0f0f0'>
       <td width='15%'>
-        11:00 - 12:30
-      </td>
-      <td width='85%'>
-        <b>
-          Paper Session I: Images, Blogs and Streams
-        </b>
-        <br />
-        <i>
-          Chair: Daniel Archambault
-        </i>
-      </td>
-    </tr>
-    <tr>
-      <td></td>
-      <td>
-        <b>
-          Visualizing Instagram: Tracing Cultural Visual Rhythms
-        </b>
-        <br />
-        <a href='http://nadavhochman.net'>Nadav Hochman</a>
-        and
-        <a href='http://razschwartz.net'>Raz Schwartz</a>
-      </td>
-    </tr>
-    <tr>
-      <td></td>
-      <td>
-        <b>
-          Cultural Analytics of Large Datasets from Flickr
-        </b>
-        <br />
-        Daniela Ushizima,
-        Lev Manovich,
-        Todd Margolis,
-        and
-        Jeremy Douglass
-      </td>
-    </tr>
-    <tr>
-      <td></td>
-      <td>
-        <b>
-          Posting Behavior on Social Media Streams toward Temporal Bias
-        </b>
-        <br />
-        Bumsuk Lee
-      </td>
-    </tr>
-    <tr>
-      <td></td>
-      <td>
-        <b>
-          Visualizing Information Diffusion and Polarisation with Key Statements
-        </b>
-        <br />
-        <a href='http://www.bbrel.co.uk'>Andrew Salway</a>,
-        Nicholas Diakopoulos,
-        and
-        Dag Elgesem
-      </td>
-    </tr>
-    <tr style='background-color: #f0f0f0'>
-      <td width='15%'>
-        12:30 - 13:30
-      </td>
-      <td width='85%'>
-        <b>
-          Lunch and Poster Session
-        </b>
-      </td>
-    </tr>
-    <tr style='background-color: #f0f0f0'>
-      <td width='15%'>
-        13:30 - 15:00
-      </td>
-      <td width='85%'>
-        <b>
-          Applications Panel
-        </b>
-        <br />
-        <i>
-          Chair: Daniel Archambault
-        </i>
-        <br />
-        This panel includes participants with varied perspectives on the application of visualization to other academic disciplines and industry to understand social media data sources. Panel members are not from the visualization community, but are rather researchers from the social sciences and humanities as well as members of industry.
-      </td>
-    </tr>
-    <tr style='background-color: #f0f0f0'>
-      <td width='15%'>
-        15:00 - 15:30
-      </td>
-      <td width='85%'>
-        <b>
-          Break and Poster Session
-        </b>
-      </td>
-    </tr>
-    <tr style='background-color: #f0f0f0'>
-      <td width='15%'>
-        15:30 - 17:00
+        15:30 &ndash; 17:00
       </td>
       <td width='85%'>
         <b>
           Paper Session II: Microblogs
         </b>
-        <br />
+        <br>
         <i>
           Chair: Martin Harrigan
         </i>
@@ -179,7 +81,7 @@ title: Schedule
         <b>
           Distilling Massive Amounts of Data into Simple Visualizations: Twitter Case Studies
         </b>
-        <br />
+        <br>
         Miguel Rios
         and
         <a href='http://www.umiacs.umd.edu/~jimmylin'>Jimmy Lin</a>
@@ -191,7 +93,7 @@ title: Schedule
         <b>
           Visualizing a Personal Timeline By Adding Multiple Social Contexts
         </b>
-        <br />
+        <br>
         Haewoon Kwak,
         Yoonsung Hong,
         Jinyoung You
@@ -205,7 +107,7 @@ title: Schedule
         <b>
           Web-Based Visual Analytics for Social Media
         </b>
-        <br />
+        <br>
         Daniel Best,
         Joe Bruce,
         Scott Dowson,
@@ -220,7 +122,7 @@ title: Schedule
         <b>
           Visualization of the Public's Opinion on Politically Influential Tweets
         </b>
-        <br />
+        <br>
         Tanyoung Kim
         and
         Carl Disalvo
